--- a/hive/docker-compose.yml
+++ b/hive/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - ./hadoop-hive.env
     ports:
       - "50070:50070"
+    networks:
+      - hive-spark-net
   datanode:
     image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
     volumes:
@@ -21,6 +23,8 @@ services:
       SERVICE_PRECONDITION: "namenode:50070"
     ports:
       - "50075:50075"
+    networks:
+      - hive-spark-net
   hive-server:
     image: bde2020/hive:2.3.2-postgresql-metastore
     env_file:
@@ -30,6 +34,8 @@ services:
       SERVICE_PRECONDITION: "hive-metastore:9083"
     ports:
       - "10000:10000"
+    networks:
+      - hive-spark-net
   hive-metastore:
     image: bde2020/hive:2.3.2-postgresql-metastore
     env_file:
@@ -39,13 +45,23 @@ services:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075 hive-metastore-postgresql:5432"
     ports:
       - "9083:9083"
+    networks:
+      - hive-spark-net
   hive-metastore-postgresql:
     image: bde2020/hive-metastore-postgresql:2.3.0
+    networks:
+      - hive-spark-net
   presto-coordinator:
     image: shawnzhu/prestodb:0.181
     ports:
       - "8080:8080"
+    networks:
+      - hive-spark-net
 
 volumes:
   namenode:
   datanode:
+
+networks:
+  hive-spark-net:
+    external: true
