--- a/hive/docker-compose.yml
+++ b/hive/docker-compose.yml
@@ -51,12 +51,21 @@ services:
     image: bde2020/hive-metastore-postgresql:2.3.0
     networks:
       - hive-spark-net
-  presto-coordinator:
-    image: shawnzhu/prestodb:0.181
+  spark:
+    image: bitnami/spark:3.3.0
+    environment:
+      - SPARK_MODE=master
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+    volumes:
+      - "C:/Users/TUF Gaming/Documents/GitHub/PY02-BD2/hive/hive-config/hive-site.xml:/opt/bitnami/spark/conf/hive-site.xml"
     ports:
-      - "8080:8080"
+      - "8081:8080"
     networks:
       - hive-spark-net
+
 
 volumes:
   namenode:
